--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 64px;
+  min-height: 80px;
   padding-right: 24px;
   padding-left: 24px;
   padding-top: 12px;
@@ -49,12 +49,15 @@
 .SearchFormInput {
   display: inline-block;
   width: 100%;
+  height: 100%;
   font: inherit;
   font-size: 20px;
   border: none;
   outline: none;
   padding-left: 4px;
   padding-right: 4px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 
 .SearchFormInput::placeholder {
