--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -4,3 +4,14 @@
   grid-gap: 16px;
   padding-bottom: 24px;
 }
+
+.Loader {
+  text-align: center;
+}
+
+.Text {
+  text-align: center;
+  margin-top: 50px;
+  font-size: 26px;
+  color: rgb(230, 14, 14);
+}
